<resources>
    <string name="app_name">Mono-Vpn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error">Something went wrong</string>
    <string name="dot">\u2022</string>
    <string name="settings">Settings</string>
    <string name="display">Display</string>
    <string name="light_mode">Light Mode</string>
    <string name="auto">Auto</string>
    <string name="dark_mode">Dark mode</string>
</resources>